# SoftwareTestLab

./: .gitignore  .gitmodules  README.md  pack_tests.py
slides/: 软件测试实验1.pptx  软件测试实验2.pptx  软件测试实验3.pptx
testing-ai/: .env.example  .gitignore  hello_llm.py  test_humaneval.py  test_jailbreak.py
testing-web/: test_SwagLabs.py
unittest-cpp/: CMakeLists.txt  minishell_builtin_test.cc  minishell_pipe_test.cc  minishell_redirect_test.cc  minishell_test_base.h
